# rust-lsp

./: .gitignore  Cargo.toml  README.md  tarpaulin.toml
benches/: client_performance.rs  message_parsing.rs  transport_benchmarks.rs
examples/: basic_client.rs  diagnostics.rs  file_operations.rs
src/: client.rs  error.rs  lib.rs  transport.rs  types.rs
src/types/: initialization.rs  jsonrpc.rs  lsp.rs
tests/: test_client.rs  test_transport.rs  test_types.rs
tests/common/: mod.rs
