[package]
name = "rust-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <email@example.com>"]
description = "A Language Server Protocol client implementation in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/rust-lsp"
readme = "README.md"
keywords = ["lsp", "language-server-protocol", "editor", "ide"]
categories = ["text-editors", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
log = "0.4"
url = "2.5"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
mockall = "0.12"
serial_test = "3.0"
tempfile = "3.0"
bytes = "1.0"

[[bench]]
name = "message_parsing"
harness = false

[[bench]]
name = "client_performance"
harness = false

[[bench]]
name = "transport_benchmarks"
harness = false
