[package]
name = "tokio-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Sam <rigdoncook@gmail.com>"]
description = "A robust, async Language Server Protocol (LSP) client implementation in Rust with full LSP 3.16 support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sam10266/rust-lsp"
homepage = "https://github.com/sam10266/rust-lsp"
documentation = "https://docs.rs/tokio-lsp"
readme = "README.md"
keywords = ["lsp", "language-server", "async", "editor", "tokio"]
categories = ["development-tools", "asynchronous"]
exclude = ["/.github", "/target", "/examples", "**/*.orig"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
log = "0.4"
url = "2.5"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
mockall = "0.12"
serial_test = "3.0"
tempfile = "3.0"
bytes = "1.0"

[[bench]]
name = "message_parsing"
harness = false

[[bench]]
name = "client_performance"
harness = false

[[bench]]
name = "transport_benchmarks"
harness = false
